[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luracoin"
version = "0.1.0"
description = "Luracoin Python implementation — an educational cryptocurrency project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Marcos Aguayo" }]
keywords = ["cryptocurrency", "blockchain", "luracoin", "educational"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "base58",
    "bip32utils",
    "docopt",
    "ecdsa",
    "mnemonic",
    "redis",
    "rocksdict",
    "safer",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[project.scripts]
luracoin = "luracoin.cli:cli"

[project.urls]
Repository = "https://github.com/luracoin/luracoin-python"

[tool.setuptools.packages.find]
include = ["luracoin*"]
exclude = ["tests*", "docs*", "design*"]

[tool.black]
line-length = 79
target-version = ["py39"]
exclude = '''.git|env/'''
